// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify RDS Model level Auth rules on queries: should successfully transform apiKey auth rule 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"apiKey\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform apiKey auth rule 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform apiKey auth rule 3`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"apiKey\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform apiKey auth rule 4`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 3`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 4`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 5`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\",
  \\"identityClaim\\": \\"sub::username\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"owner\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 6`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\",
  \\"identityClaim\\": \\"sub::username\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"owner\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 9`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\",
  \\"identityClaim\\": \\"sub::username\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"owners\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 10`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 11`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\",
  \\"identityClaim\\": \\"sub::username\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"owners\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 12`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 13`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"identityClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"identityClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 14`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 15`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"identityClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"identityClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 16`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 17`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"group\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 18`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 19`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"group\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 20`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 21`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"groups\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 22`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 23`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"groups\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform cognito auth rules 24`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform function auth rule 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"custom\\",
  \\"provider\\": \\"function\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform function auth rule 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform function auth rule 3`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"custom\\",
  \\"provider\\": \\"function\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform function auth rule 4`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform iam auth rules 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.authRole,
  \\"cognitoIdentityPoolId\\": $ctx.identity.cognitoIdentityPoolId,
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform iam auth rules 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform iam auth rules 3`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.authRole,
  \\"cognitoIdentityPoolId\\": $ctx.identity.cognitoIdentityPoolId,
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform iam auth rules 4`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform iam auth rules 5`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.unauthRole,
  \\"cognitoIdentityPoolId\\": $ctx.identity.cognitoIdentityPoolId,
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform iam auth rules 6`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform iam auth rules 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.unauthRole,
  \\"cognitoIdentityPoolId\\": $ctx.identity.cognitoIdentityPoolId,
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform iam auth rules 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 3`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 4`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 5`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\",
  \\"identityClaim\\": \\"sub::username\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"owner\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 6`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\",
  \\"identityClaim\\": \\"sub::username\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"owner\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 9`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\",
  \\"identityClaim\\": \\"sub::username\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"owners\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 10`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 11`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\",
  \\"identityClaim\\": \\"sub::username\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"owners\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 12`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 13`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"identityClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"identityClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 14`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 15`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"identityClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"identityClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 16`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 17`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"group\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 18`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 19`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"group\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 20`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 21`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"groups\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 22`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 23`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\",
  \\"allowedFields\\":   [\\"id\\", \\"title\\", \\"groups\\"]
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
$util.unauthorized
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform oidc auth rules 24`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;
